Changed the header photo

--- a/css/creative.css
+++ b/css/creative.css
@@ -29,7 +29,7 @@ hr.light {
 }
 
 a {
-    color: #fff;
+    color: #fffd5a;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
