--- a/css/creative.css
+++ b/css/creative.css
@@ -106,7 +106,7 @@ aside {
     text-transform: uppercase;
     font-size: 13px;
     font-weight: 700;
-    color: #222;
+    color: rgba(255, 255, 255, 0.7);
 }
 
 .navbar-default .nav > li>a:hover,
@@ -167,7 +167,7 @@ aside {
 
     .navbar-default.affix .nav > li>a,
     .navbar-default.affix .nav>li>a:focus {
-        color: #fff;
+        color: rgba(255, 255, 255, 0.7);;
     }
 
     .navbar-default.affix .nav > li>a:hover,
