--- a/css/creative.css
+++ b/css/creative.css
@@ -16,12 +16,12 @@ body {
 
 hr {
     max-width: 50px;
-    border-color: #a04dff;
+    border-color: #51578f;
     border-width: 3px;
 }
 
 .light {
-    color: #fffd5a;
+    color: #FFe15a;
 }
 
 .logo {
@@ -29,11 +29,11 @@ hr {
 }
 
 hr.light {
-    border-color: #fffd5a;
+    border-color: #FFe15a;
 }
 
 a {
-    color: #fffd5a;
+    color: #FFe15a;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -41,7 +41,11 @@ a {
 
 a:hover,
 a:focus {
-    color: #fffd5a;
+    color: #FFe15a;
+}
+
+.title-text {
+    color: rgba(255, 255, 255, 0.8);
 }
 
 h1 {
@@ -64,7 +68,7 @@ p {
 }
 
 .bg-primary {
-    background-color: #a04dff;
+    background-color: #51578f;
 }
 
 .bg-dark {
@@ -101,12 +105,12 @@ aside {
     text-transform: uppercase;
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
     font-weight: 700;
-    color: #a04dff;
+    color: #51578f;
 }
 
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
-    color: #a04dff;
+    color: #51578f;
 }
 
 .navbar-default .nav > li>a,
@@ -119,12 +123,12 @@ aside {
 
 .navbar-default .nav > li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
-    color: #a04dff;
+    color: #51578f;
 }
 
 .navbar-default .nav > li.active>a,
 .navbar-default .nav>li.active>a:focus {
-    color: #a04dff!important;
+    color: #51578f!important;
     background-color: transparent;
 }
 
@@ -165,12 +169,12 @@ aside {
 
     .navbar-default.affix .navbar-header .navbar-brand {
         font-size: 14px;
-        color: #a04dff;
+        color: #51578f;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
     .navbar-default.affix .navbar-header .navbar-brand:focus {
-        color: #a04dff;
+        color: #51578f;
     }
 
     .navbar-default.affix .nav > li>a,
@@ -180,7 +184,7 @@ aside {
 
     .navbar-default.affix .nav > li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
-        color: #a04dff;
+        color: #51578f;
     }
 }
 
@@ -291,7 +295,7 @@ header .header-content .header-content-inner p {
     text-align: center;
     color: #fff;
     opacity: 0;
-    background: rgba(160,77,255,.9);
+    background: rgba(81,87,143,.7);
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -340,7 +344,7 @@ header .header-content .header-content-inner p {
 }
 
 .text-primary {
-    color: #a04dff;
+    color: #51578f;
 }
 
 .no-gutter > [class*=col-] {
@@ -402,9 +406,9 @@ fieldset[disabled] .btn-default.active {
 }
 
 .btn-primary {
-    border-color: #a04dff;
+    border-color: #51578f;
     color: #fff;
-    background-color: #a04dff;
+    background-color: #51578f;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -418,7 +422,7 @@ fieldset[disabled] .btn-default.active {
 .open > .dropdown-toggle.btn-primary {
     border-color: #ed431f;
     color: #fff;
-    background-color: #a04dff;
+    background-color: #51578f;
 }
 
 .btn-primary:active,
@@ -445,12 +449,12 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    border-color: #a04dff;
-    background-color: #a04dff;
+    border-color: #51578f;
+    background-color: #51578f;
 }
 
 .btn-primary .badge {
-    color: #a04dff;
+    color: #51578f;
     background-color: #fff;
 }
 
