Compress images and move Project Olynthus description

--- a/css/creative.css
+++ b/css/creative.css
@@ -203,7 +203,7 @@ header {
     min-height: auto;
     text-align: center;
     color: #fff;
-    background-image: url(../img/header2.jpg);
+    background-image: url(../img/header2-min.jpg);
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
